adds wrapper support
