# api/v1alpha/env.swagger.json
@@ -547,6 +547,13 @@
         "modelName": {
           "type": "string",
           "description": "Name of the environment model."
+        },
+        "wrappers": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/v1alphaEnvWrapper"
+          },
+          "description": "Wrappers for the environment."
         }
       },
       "title": "Request to create an environment"
@@ -560,6 +567,32 @@
         }
       },
       "description": "Response from creating an environment."
+    },
+    "v1alphaDeepmindAtariWrapper": {
+      "type": "object",
+      "properties": {
+        "episodeLife": {
+          "type": "boolean",
+          "format": "boolean",
+          "description": "Make end-of-life == end-of-episode, but only reset on true game over.\nDefaults to true."
+        },
+        "clipRewards": {
+          "type": "boolean",
+          "format": "boolean",
+          "description": "Bin reward to {+1, 0, -1} by its sign\nDefaults to true."
+        },
+        "frameStack": {
+          "type": "boolean",
+          "format": "boolean",
+          "description": "Returns lazy array, which is much more memory efficient."
+        },
+        "scaleFloat": {
+          "type": "boolean",
+          "format": "boolean",
+          "description": "Convert to a scaled float."
+        }
+      },
+      "description": "DeepmindAtariWrapper is the deepmind wrapper for the atari environment."
     },
     "v1alphaDeleteEnvResponse": {
       "type": "object",
@@ -591,6 +624,16 @@
         }
       },
       "description": "A discrete space in math:`{ 0, 1, ..., n-1 \\}`."
+    },
+    "v1alphaEnvWrapper": {
+      "type": "object",
+      "properties": {
+        "deepmindAtariWrapper": {
+          "$ref": "#/definitions/v1alphaDeepmindAtariWrapper",
+          "description": "Configure environment for Deepmind-style Atari."
+        }
+      },
+      "description": "EnvWrapper is an environment wrapper."
     },
     "v1alphaEnvironment": {
       "type": "object",
@@ -677,7 +720,7 @@
         "data": {
           "type": "string",
           "format": "byte",
-          "description": "Data is image data."
+          "description": "Data is image data in jpeg format."
         },
         "shape": {
           "type": "array",
